--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-Flask==2.3.0
-gunicorn==20.1.0
-twilio==8.5.0  # For SMS parsing
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.95.0
+beautifulsoup4==4.12.2
